--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="bIsWeighted">שקילה:</string>
     <string name="QtyInPackage">כמות באריזה:</string>
     <string name="ItemPrice">מחיר:</string>
+    <string name="ItemNotFound">מוצר לא נמצא</string>
 </resources>
