--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="QtyInPackage">כמות באריזה:</string>
     <string name="ItemPrice">מחיר:</string>
     <string name="ItemNotFound">מוצר לא נמצא</string>
+    <string name="ReadJSONProblem">בעיה בקריאת נתונים</string>
+    <string name="CantGetJSON">לא התקבלנו נתונים</string>
 </resources>
